--- a/VRChat/74/1254474.html
+++ b/VRChat/74/1254474.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "3OW842gV6HT5z63INYVbpFFUY9V1u/Snm7X180wSk9c="></script>
+    "8MhKvMfIMRa1O9yJBE9Sl5fgwlZbWv++kupiJCSCR8U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VOUラバスト【VRチャット向け３Dモデル】","description":"◆概要\n\nみこさく制作のアバター「VOU(ボー)」のラバーストラップです。\nおまけで、VOU(ボー)専用の髪型も同梱しています。\n\n【アバターはこちら：https://shimesaba-suisan.booth.pm/items/1165247】\n\n\n制作：みこさく\n\n\n◆使い方\n\nアバターなどにぶらぶらさせてあげてください。\nVOU(ボー)アバターを所持してくれている人向けになっていますが、それ以外の方も使い道があるようならどうぞ！\n\n同梱のVOU専用の髪型について。\nVOUの仕様に合わせて作られたものです。耳の生え際などに髪の毛がないため、他に流用させる場合は注意してください。\n\n髪型のテクスチャはアバター本体のテクスチャと同じものを使用し、髪型の部分だけを上書きしたものになっているため、\n改変方法は各自におまかせします。\n\n\n◆内容\n\n▽ラバスト.unitypackage\n└ラバスト.fbx\n└ラバスト.png\n└マテリアルなど\n▽髪型2\n└髪型2.fbx\n└髪型2.png\n└マテリアルなど\n\n\n※ファイル名は上記とは異なります。\n\n▽注意.txt\n\n\n◆利用・改変等に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\n詳しくは「README.txt」を参照し、それでもわからない場合は問い合わせしてください。\n\n\n◆著作権・制限事項・免責事項などの難しいところ\n\n本データの自作発言、他者への二次配布、パブリックワールド設置アバターへの使用を禁止します。\n本データの著作権は、しめさば水産に帰属します。\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。\n","url":"https://booth.pm/ja/items/1254474","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1254474/a20654d5-1480-4ce1-841f-bcdc8d3aa559_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3OW842gV6HT5z63INYVbpFFUY9V1u/Snm7X180wSk9c="></script>
+    nonce="8MhKvMfIMRa1O9yJBE9Sl5fgwlZbWv++kupiJCSCR8U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -604,7 +604,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
